# alert_project

./: .gitignore  README.md  docker-compose.yml
data_manipulation/: Dockerfile  main.py  pyproject.toml  requirements.txt  startup.sh  test_main.py
