[tool.poetry]
name = "alert_project"
version = "0.1.0"
description = ""
authors = ["Vashchonak Anastasiya <70859134+nastyavasch@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.4"
numpy = "^1.23.3"
pytest = "^7.1.3"
black = "^22.8.0"
flake8 = "^5.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
